[workspace]
members = ["enclave", "client","runner"]

[patch.crates-io]
enclave-runner = { git = "https://github.com/fortanix/rust-sgx", branch = "mz/async-usercalls" }
sgxs = { git = "https://github.com/fortanix/rust-sgx", branch = "mz/async-usercalls" }
sgx-isa = { git = "https://github.com/fortanix/rust-sgx", branch = "mz/async-usercalls" }
sgxs-loaders = { git = "https://github.com/fortanix/rust-sgx", branch = "mz/async-usercalls" }