[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aesm-client = { version = "0.5.2", features = ["sgxs"] }
enclave-runner = { version = "0.5.0" }
sgxs-loaders = { version = "0.3.0" }